# defi-tx-indexer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs  pagination.rs  response.rs
crates/api/src/routes/: analytics.rs  blocks.rs  health.rs  mod.rs  pools.rs  swaps.rs  tokens.rs  traders.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  models.rs  queries.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: classifier.rs  error.rs  events.rs  lib.rs  trace.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: config.rs  main.rs  worker.rs
migrations/: 20240101000001_initial_schema.sql  20240102000001_relax_fk_and_checkpoint.sql
sql/: full_script.sql
sql/auth/: 001_roles.sql
sql/ddl/: 001_extensions.sql  002_types.sql  003_tables.sql  004_indexes.sql  005_comments.sql
sql/dml/: 001_seed_data.sql
sql/olap/: 001_window_functions.sql
sql/procedures/: 001_procedures.sql
sql/queries/: 001_pool_swap_volumes.sql  002_user_swap_analytics.sql  003_failed_transactions.sql  004_block_gas_usage.sql  005_token_transfer_volumes.sql  006_price_snapshots.sql  007_above_avg_gas_transactions.sql  008_liquidity_events.sql  009_call_depth_distribution.sql  010_swap_block_info.sql
sql/triggers/: 001_triggers.sql
sql/views/: 001_views.sql
