[workspace]
resolver = "2"
members = [
    "crates/db",
    "crates/decoder",
    "crates/indexer",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
alloy = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numeric
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"

# Resilience
backoff = { version = "0.4", features = ["tokio"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
