[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "REST API server for DeFi Analytics (Uniswap V3)"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
db = { path = "../db" }

axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
bigdecimal.workspace = true
