[package]
name = "db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLx-based database layer for DeFi Analytics (Uniswap V3)"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
tokio.workspace = true
