[package]
name = "decoder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ABI decoder and event parser for Uniswap V3 events"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
